# Bot-para-whatsapp

./: .gitignore  api.py  main.py  pyproject.toml  requeriments.txt  teste.py
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/: DevToolsActivePort  Local State
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/Default/: Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Visited Links  Web Data
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/Default/DawnCache/: data_1  index
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/Default/Extension Scripts/: LOG
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/Default/Extension State/: LOG  LOG.old
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/Default/GPUCache/: data_1  index
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/Default/Session Storage/: LOG  LOG.old
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/Default/Sessions/: Session_13326904540592784  Session_13326904620147811  Tabs_13326904540699255  Tabs_13326904620227828
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/Default/Site Characteristics Database/: LOG  LOG.old
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/GrShaderCache/: data_0  data_1  index
C:\Users\Cisbot\AppData\Local\Google\Chrome\User Data/ShaderCache/: data_1  index
abrirchamado/: LIGAR.bat  app.js  package-lock.json  package.json  suporte.js
app/controller/: account.py
app/models/: crud.py  databases.py  modelsUser.py
app/views/: middleware.py
(+439 files in other folders)
