[tool.poetry]
name = "praticas"
version = "0.1.0"
description = ""
authors = ["Daniel Fernandes <danielfernandes202@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
